# lqr_simulation

./: CMakeLists.txt  lqr.cpp  readme.md  simulation.m
